<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ControlActivity">

        <EditText
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telepon"
            android:inputType="phone" />

        <EditText
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/Kota"
            android:spinnerMode="dialog"/>

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="calendar"/>

        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"/>

        <RatingBar
            android:stepSize="1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5" />

        <Button
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

    </LinearLayout>
</ScrollView>