<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="25dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="#08e497" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password" />

        <EditText
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#10ec89" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nama"
            android:paddingRight="25dp"/>

        <EditText
            android:id="@+id/t3"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:inputType="textPassword"
            android:textColor="#10ec89" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/gambar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <Button
        android:onClick="openCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"/>

    <Button
        android:onClick="woh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:background="#26ff00"
        android:padding="20dp"
        android:text="REGISTER"
        android:textSize="15dp"
        android:textStyle="bold" />

</LinearLayout>